# httpserver

./: .gitignore  CMakeLists.txt  README.md  config.json  prompt_request_body.json  pytest.py
include/: httpserver.h  jsonutils.h
source/: httpserver.cpp  main.cpp
tests/: CMakeLists.txt  main.cpp  prompt_body_after_first_request_etalon.json  testhttpserver.cpp  testhttpserver.h
